# rtype

./: .gitignore  CMakeLists.txt  TODO  TODO_list  backtrace  game_features.txt  level2  qwe  server_rtype
client/: #Makefile#  CMakeLists.txt
client/client_rtype.dir/Debug/client_rtype.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  client_rtype.lastbuildstate  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
client/inc/: AnimatedSprite.hh  AudioCall.hh  Compenent.hh  CompenentManager.hh  Entity.hh  ICompenent.hh  IPacket.hh  ITcpSocket.hh  IUdpSocket.hh  NetworkManager.hh  TcpSocket.hh  UdpSocket.hh
client/inc/Audio/: AudioCall.hh  AudioCallSystem.hh
client/inc/Compenent/: Compenent.hh  ICompenent.hh
client/inc/Component/: Component.hh  IComponent.hh
client/inc/Entity/: CompenentManager.hh  ComponentManager.hh  Entity.hh  ManagerException.hh
client/inc/Graphics/: ADrawable.hh  Event.hh  IDrawable.hh  IEvent.hh  IWindow.hh  Text.hh  View.hh  Window.hh
client/inc/Network/: IPacket.hh  ITcpSocket.hh  IUdpSocket.hh  NetworkManager.hh  TcpSocket.hh  UdpSocket.hh
client/inc/Scenes/: IntroScene.hh
client/inc/System/: ASystem.hh  ISystem.hh
client/inc/System/Audio/: Audio.hh  AudioBuffer.hh  AudioCallSystem.hh  Recorder.hh
client/inc/System/Collider/: ColliderSystem.hh  FCollision.hh
client/inc/System/Event/: EventAggregator.hh
client/inc/System/Mob/: MobSystem.hh
client/inc/System/Movement/: Movement.hh
client/inc/System/Render/: #StageScene.hh#  ADrawable.hh  AView.hh  AnimatedSprite.hh  Event.hh  EventAggregator.hh  GameRoomScene.hh  IWindow.hh  LoginScene.hh  MenuScene.hh  ReadyScene.hh  RenderSystem.hh  RenderingSystem.hh  Scene.hh  ScrollingSprite.hh  SettingsScene.hh  StageScene.hh  Text.hh  TextureManager.hh  Window.hh
client/inc/System/Shoot/: #ShootSystem.hh#  Pattern.hh  ShootSystem.hh
client/inc/System/Sound/: SoundSystem.hh
client/inc/Utility/: ClientError.hh  Clock.hh  Enum.hh  IClock.hh  IMutex.hh  IRTime.hh  ISound.hh  ISoundBuffer.hh  IThread.hh  JSONParser.hh  RTime.hh  ServerError.hh  Shoot.hh  Sound.hh  SoundBuffer.hh  SystemManager.hh  ThreadFactory.hh  UnixMutex.hh  WinThread.hh
client/res/ship/: Sans titre-1.psd  player-ship-PSD.psd
client/res/sound/: explosion.flac  menu_move.flac  shoot.flac  typing.flac
client/res/stages/: numero.psd  stage-police.psd
client/src/: #main.cpp#  AnimatedSprite.cpp  AudioCall.cpp  NetworkManager.cpp  TcpSocket.cpp  UdpSocket.cpp  main.cpp
client/src/Audio/: Audio.cpp  AudioBuffer.cpp  AudioCall.cpp  AudioCallSystem.cpp  Recorder.cpp  testsfml.cpp
client/src/Compenent/: Compenent.hh  ICompenent.hh
client/src/Graphics/: Event.cpp  Window.cpp
client/src/Network/: NetworkManager.cpp  TcpSocket.cpp  UdpSocket.cpp
client/src/Scenes/: IntroScene.cpp
client/src/System/: ISystem.hh
client/src/System/Audio/: Audio.cpp  AudioBuffer.cpp  AudioCallSystem.cpp  Recorder.cpp
client/src/System/Collider/: FCollision.cpp
client/src/System/Event/: EventAggregator.cpp
client/src/System/Render/: AnimatedSprite.cpp  ReadyScene.cpp  RenderSystem.cpp  ScrollingSprite.cpp
client/src/System/Shoot/: Pattern.cpp
client/src/Utility/: Clock.cpp  JSONParser.cpp  RTime.cpp  Sound.cpp  SoundBuffer.cpp  UnixMutex.cpp  WinMutex.cpp
client/x64/Debug/client_rtype.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  client_rtype.lastbuildstate  custombuild.command.1.tlog  (+1 more)
mobs/mob-1/: CMakeLists.txt  mob-1.cpp
mobs/mob-2/: CMakeLists.txt
server/: CMakeLists.txt  Communication.hpp  IFifo.hh  UnixFifo.hpp  WinThread.h
server/.database/: .abcd_data  .asdf_data  .azer_data  .badr_data  .bite_data  .bonjour_data  .charles_data  .denis_data  .fesses_data  .heeeeeru_data  .heruuuu_data  .kevin_data  .labite_data  .monku_data  .motobiped_data  .neptune_data  .nike_data  .pipi_data  .popo_data  .qwer_data  .tinois_data  .zoba_data  .zobe_data  .zobi_data  .zobit_data  .zobite_data  .zobiteu_data
server/Threads/: Exceptions.h  UnixMutex.cpp
server/_DLLoader/: ADLLoader.cpp  ADLLoader.h  ADLLoader.hh  DLError.hh  UnixDLLoader.h  UnixDLLoader.hh  WinDLLoader.cpp  WinDLLoader.h  WinDLLoader.hh
server/_Threads/: ICondVar.hh  IThread.h  IThread.hh  IThreadPool.hh  Thread.hh  ThreadPool.hh  UnixThread.h  WinCondVar.cpp  WinCondVar.hh  WinMutex.cpp  WinThread.h  a.out  main.cpp
server/abstractions/: IFifo.hh  Mutex.hh  ScopedLock.cpp  ScopedLock.hh  ThreadPool.hh  UnixCondVar.cpp  UnixCondVar.hh  UnixDLLoader.cpp  UnixFifo.hpp  UnixMutex.h  UnixThread.h  WinCondVar.hh  WinDLLoader.cpp  WinDLLoader.hh  WinFifo.hpp  WinMutex.cpp
server/inc/: .#ComponentManager.hh  ACommunicator.hh  AController.h  AController.hh  ADLLoader.hh  ASystem.hh  AccountController.hh  BonusSystem.hh  BossSystem.hh  Component.hh  ComponentManager.hh  ConversationController.hh  Entity.hh  Enum.h  Enum.hh  GameController.hh  GameManager.hh  GameplayController.hh  ICommunicator.h  IServerMonitor.hh  IServerSocket.h  IServerSocket.hh  ISocketSet.h  ISocketSet.hh  ITcpSocket.hh  IThread.hh  IThreadPool.hh  IUserManager.hh  IUserManager.h~  JSONParser.hh  JSONSerializer.hh  MobSystem.hh  NetworkManager.h  NetworkManager.hh  Packet.hh  ServerError.h  ServerError.hh  ShootSystem.hh  TCPCommunicator.hh  ThreadFactory.hh  (+23 more)
server/src/: ADLLoader.cpp  ASystem.cpp  AccountController.cpp  BonusSystem.cpp  BossSystem.cpp  ConversationController.cpp  GameController.cpp  GameManager.cpp  GameplayController.cpp  JSONParser.cpp  JSONSerializer.cpp  MobSystem.cpp  Packet.cpp  ServerError.cpp  ShootSystem.cpp  UnixMutex.cpp  UnixServerMonitor.cpp  UnixServerSocket.cpp  UnixSocketSet.cpp  UnixTCPSocketSet.cpp  UnixThread.h  UnixUDPSocketSet.cpp  UserManager.cpp  UserManager.cpp~  WinMutex.cpp  WinMutex.h  WinServerMonitor.cpp  WinServerSocket.cpp  WinSocketSet.cpp  WinTCPSocketSet.cpp  WinUDPSocketSet.cpp  main.cpp
shared_libs/fires/: CMakeLists.txt  fires.cpp
shared_libs/hitboxes/: CMakeLists.txt  hitboxes.cpp
shared_libs/mobs/: CMakeLists.txt
shared_libs/monsters/: CMakeLists.txt  monsters.cpp
(+35 files in other folders)
