
cmake_minimum_required(VERSION 3.1.0)

set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
set(CMAKE_BUILD_TYPE Debug)

set(mob-1_SOURCES ${mob-1_SOURCES} ${CMAKE_CURRENT_SOURCE_DIR}/Mob-1.cpp)
set(mob-1_HEADERS ${mob-1_HEADERS} ${CMAKE_CURRENT_SOURCE_DIR}/Mob-1.hh)

add_library(mob-1 SHARED ${mob-1_SOURCES} ${mob-1_HEADERS}})

if (CMAKE_SYSTEM_NAME STREQUAL Windows)
	set_target_properties(mob-1 PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
    set_target_properties(mob-1 PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR})
    set_target_properties(mob-1 PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR})
elseif(CMAKE_SYSTEM_NAME STREQUAL Linux)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wall -Wextra")
endif()